Release v1.7.0 :: Business API Refactoring & Optimization