@@ -1,17 +1,24 @@
 package io.github.up2jakarta.csv.core;
 
+import io.github.up2jakarta.csv.BusinessId;
+import io.github.up2jakarta.csv.BusinessLink;
+import io.github.up2jakarta.csv.Segment;
+import io.github.up2jakarta.csv.api.Container;
 import io.github.up2jakarta.csv.api.ext.TypeExtension;
+import io.github.up2jakarta.csv.api.ext.TypeListener;
 import io.github.up2jakarta.csv.api.ext.TypeResolver;
 import io.github.up2jakarta.csv.cfg.*;
 import io.github.up2jakarta.csv.core.BSAccessor.Mode;
+import io.github.up2jakarta.csv.core.BSManager.Factory;
 import io.github.up2jakarta.csv.core.BSNode.Bean;
 import io.github.up2jakarta.csv.core.BSNode.Flat;
-import io.github.up2jakarta.csv.core.BSOperator.Factory;
+import io.github.up2jakarta.csv.core.BSOperator.PId;
+import io.github.up2jakarta.csv.core.BSOperator.SId;
+import io.github.up2jakarta.csv.core.BSProperty.IProcessor;
 import io.github.up2jakarta.csv.core.BSProperty.PFragment;
 import io.github.up2jakarta.csv.core.BSProperty.PPosition;
-import io.github.up2jakarta.csv.data.DataResolver;
-import io.github.up2jakarta.csv.data.DataType;
-import io.github.up2jakarta.csv.data.Segment;
+import io.github.up2jakarta.csv.data.ITerm;
+import io.github.up2jakarta.csv.data.TermResolver;
 import io.github.up2jakarta.lov.CodeList;
 import io.github.up2jakarta.lov.TypeAdapter;
 import io.github.up2jakarta.lov.core.BeanException;
@@ -19,6 +26,7 @@ import io.github.up2jakarta.lov.core.StringAdapter;
 import io.github.up2jakarta.lov.core.Wrapper;
 import jakarta.persistence.AccessType;
 import jakarta.validation.Valid;
+import jakarta.validation.Validator;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.*;
@@ -34,13 +42,16 @@ import static io.github.up2jakarta.lov.core.Defaults.wrap;
 import static io.github.up2jakarta.lov.core.Overrides.*;
 import static java.util.Arrays.asList;
 import static java.util.Arrays.stream;
-import static java.util.Collections.unmodifiableList;
 import static java.util.stream.Collectors.joining;
 
 /**
  * Internal business context.
  */
-final class BSContext<D extends DataType<D>> {
+@PositionOverride(path = {})
+final class BSContext<D extends ITerm<D>> {
+
+    private static final boolean EAC = TypeListener.class.desiredAssertionStatus();
+    private static final Position NAN = BSContext.class.getAnnotation(PositionOverride.class).value();
 
     private final Map<TypeResolver<?, ?>, Class<?>> cache = new LinkedHashMap<>();
     private final Map<Path, PositionOverride> positions = new LinkedHashMap<>();
@@ -51,28 +62,30 @@ final class BSContext<D extends DataType<D>> {
     private final LinkedList<Field> path = new LinkedList<>();
     private final Class<? extends Segment> type;
     private final Optional<AccessType> access;
-    private final DataResolver<D> resolver;
-    private final Factory<?> factory;
+    private final Factory<D> factory;
+    private final List<Field> links;
+    private final List<SId<D>> ids;
     private final Listener checker;
     private final VContext context;
     private final Type[] arguments;
-    private final Mode mode;
     private final int offset;
+    private final Mode mode;
 
-    BSContext(Factory<?> f, Class<? extends Segment> t, Mode m, DataResolver<D> d) throws BeanException {
-        this.context = (f.validator != null) ? VContext.from(t) : VContext.DISABLED;
-        add(PositionOverride.class, t, this.positions::put, PositionOverride::path);
-        add(FragmentOverride.class, t, this.fragments::put, FragmentOverride::path);
-        add(ValidOverride.class, t, this.validations::put, ValidOverride::path);
-        this.access = getAccessType(Optional.empty(), t);
-        this.checker = Listener.of(t, f.context, m);
-        this.extensions = extension(t, f.context);
+    BSContext(Factory<D> factory, Class<? extends Segment> type, Mode mode) throws BeanException {
+        add(PositionOverride.class, type, this.positions::put, PositionOverride::path);
+        add(FragmentOverride.class, type, this.fragments::put, FragmentOverride::path);
+        add(ValidOverride.class, type, this.validations::put, ValidOverride::path);
+        this.checker = Listener.of(type, factory.context, mode, EAC);
+        this.access = getAccessType(Optional.empty(), type);
+        this.extensions = extension(type, factory.context);
+        this.context = VContext.from(type);
+        this.links = new LinkedList<>();
+        this.ids = new LinkedList<>();
         this.arguments = NO_TYPES;
-        this.resolver = d;
-        this.factory = f;
+        this.factory = factory;
+        this.mode = mode;
+        this.type = type;
         this.offset = 0;
-        this.mode = m;
-        this.type = t;
     }
 
     private BSContext(BSContext<D> origin, int offset, Class<? extends Segment> type, Type... arguments) throws BeanException {
@@ -83,23 +96,24 @@ final class BSContext<D extends DataType<D>> {
         origin.path.forEach(this.path::addLast);
         origin.stack.forEach(this.stack::addLast);
         this.extensions = origin.extensions;
-        this.resolver = origin.resolver;
         this.context = origin.context;
         this.checker = origin.checker;
         this.factory = origin.factory;
         this.arguments = arguments;
+        this.links = origin.links;
         this.type = origin.type;
         this.mode = origin.mode;
+        this.ids = origin.ids;
         this.offset = offset;
     }
 
-    private static List<TypeExtension<?, Annotation>> extension(Class<? extends Segment> st, BeanContext bc) throws BeanException {
+    private static List<TypeExtension<?, Annotation>> extension(Class<? extends Segment> st, Container bc) throws BeanException {
         final Extension[] extensions = getAnnotationsByType(Extension.class, st).toArray(Extension[]::new);
         final List<TypeExtension<?, Annotation>> result = new LinkedList<>();
         for (final Extension extension : extensions) {
-            result.add(getBean(bc, extension.value(), extension.name()));
+            result.add(Container.from(bc, extension.value(), extension.name()));
         }
-        return Collections.unmodifiableList(result);
+        return List.copyOf(result);
     }
 
     private static Up2Converter converter(Field field, Position config) {
@@ -133,12 +147,27 @@ final class BSContext<D extends DataType<D>> {
         if (byte[].class.isAssignableFrom(wrapper)) {
             return new BeanException(field, msg + Up2Base64.class.getSimpleName());
         }
+        if (Character.class.isAssignableFrom(wrapper)) {
+            return new BeanException(field, msg + Up2Character.class.getSimpleName());
+        }
+        if (OptionalInt.class.isAssignableFrom(wrapper)) {
+            return new BeanException(field, msg + Up2OptionalInt.class.getSimpleName());
+        }
+        if (OptionalLong.class.isAssignableFrom(wrapper)) {
+            return new BeanException(field, msg + Up2OptionalLong.class.getSimpleName());
+        }
+        if (OptionalDouble.class.isAssignableFrom(wrapper)) {
+            return new BeanException(field, msg + Up2OptionalDouble.class.getSimpleName());
+        }
+        if (Date.class.isAssignableFrom(wrapper)) {
+            return new BeanException(field, msg + Up2Date.class.getSimpleName());
+        }
         final String cn = Up2Converter.class.getSimpleName();
         return new BeanException(field, "must be annotated with @" + cn + " or one of those shortcuts");
     }
 
     @SuppressWarnings("unchecked")
-    static <S extends Segment, D extends DataType<D>> Constructor<S> from(Class<S> t, List<BSProperty<?, ?, D>> ps) throws BeanException {
+    static <S extends Segment, D extends ITerm<D>> Constructor<S> from(Class<S> t, List<BSProperty<?, D>> ps) throws BeanException {
         final long fc = ps.stream().filter(BSProperty::isFinal).count();
         if (fc == 0) {
             return null;
@@ -147,13 +176,13 @@ final class BSContext<D extends DataType<D>> {
             final Constructor<S>[] dcs = (Constructor<S>[]) t.getDeclaredConstructors();
             final List<Constructor<S>> cs = stream(dcs).filter(c -> c.isAnnotationPresent(Creator.class)).toList();
             if (cs.size() == 1) {
-                return setAccessible(cs.getFirst());
+                return cs.getFirst();
             }
             if (t.isRecord()) {
                 return null;
             }
             if (dcs.length == 1) {
-                return setAccessible(dcs[0]);
+                return dcs[0];
             }
             throw new BeanException(t, "one and only one constructor must be annotated with @Creator");
         }
@@ -163,19 +192,20 @@ final class BSContext<D extends DataType<D>> {
     private <V> BSAccessor<V> accessor(Class<V> type, Field field) throws BeanException {
         final Class<? extends Segment> container = segmentType(stack);
         final AccessType access = getAccessType(field, this.access).orElse(AccessType.FIELD);
+        if (Optional.class.isAssignableFrom(field.getType())) {
+            return Mode.wrap(mode.of(access, container, field, type));
+        }
         return mode.of(access, container, field, type);
     }
 
     private D dataType(Field field) throws BeanException {
-        if (resolver != null) {
-            final List<Class<? extends Segment>> cs = cleanStack(stack);
-            final D value = resolver.get(cs, path.toArray(Field[]::new), field).orElse(null);
-            if (value != null) {
-                resolver.check(value);
-            }
-            return value;
+        final TermResolver<D> resolver = factory.resolver;
+        final List<Class<? extends Segment>> cs = cleanStack(stack);
+        final D value = resolver.get(cs, path.toArray(Field[]::new), field).orElse(null);
+        if (value != null && !resolver.getType().isAssignableFrom(value.getClass())) {
+            throw new BeanException(value.getClass(), "invalid business term type");
         }
-        return null;
+        return value;
     }
 
     private void checkType(Field field, Class<?> type, Annotation config, TypeResolver<?, ?> tr) throws BeanException {
@@ -193,7 +223,7 @@ final class BSContext<D extends DataType<D>> {
         for (final Annotation config : fp.getAnnotations()) {
             final Resolver resolver = config.annotationType().getAnnotation(Resolver.class);
             if (resolver != null) {
-                final TypeResolver<T, Annotation> cr = getBean(factory.context, resolver.value(), resolver.name());
+                final TypeResolver<T, Annotation> cr = Container.from(factory.context, resolver.value(), resolver.name());
                 this.checkType(fp, wrappedType, config, cr);
                 founds.add(config);
                 ta.accept(cr.resolve(fp, type, config));
@@ -213,7 +243,7 @@ final class BSContext<D extends DataType<D>> {
         }
         final Up2Converter pc = converter(field, position);
         if (pc != null) {
-            final TypeAdapter<T> adapter = getBean(factory.context, pc.value(), pc.name());
+            final TypeAdapter<T> adapter = Container.from(factory.context, pc.value(), pc.name());
             if (!adapter.getType().isAssignableFrom(type)) {
                 throw new BeanException(field, "@Position[converter] does not support " + type);
             }
@@ -233,7 +263,7 @@ final class BSContext<D extends DataType<D>> {
         return (TypeAdapter<T>) result.orThrow(() -> translate(type, field));
     }
 
-    private <S extends Segment> BSNode<S, D> node(Field fp, Class<S> ft, VContext vc, Fragment fr, List<BSProperty<?, ?, D>> ps) throws BeanException {
+    private <S extends Segment> BSNode<S, D> node(Field fp, Class<S> ft, VContext vc, Fragment fr, List<BSProperty<?, D>> ps) throws BeanException {
         final int index;
         if (isInnerType(ft)) {
             final Class<?> ec = ft.getEnclosingClass();
@@ -245,23 +275,43 @@ final class BSContext<D extends DataType<D>> {
             index = -1;
         }
         if (mode == Mode.RO) {
-            return new Flat<>(index, ft, factory.validator, vc, fr, ps);
+            return new Flat<>(index, ft, this, vc, fr, ps);
         }
         final Constructor<S> cs = from(ft, ps);
         if (cs == null) {
             if (ft.isRecord()) {
-                return new Bean.JR<>(ft, factory.validator, vc, fr, ps);
+                return new Bean.JR<>(ft, this, vc, fr, ps);
             }
-            return new Bean.BM<>(index, ft, factory.validator, vc, fr, ps);
+            return new Bean.BM<>(index, ft, this, vc, fr, ps);
         }
-        return new Bean.JB<>(index, ft, factory.validator, vc, fr, ps, cs);
+        return new Bean.JB<>(index, ft, this, vc, fr, ps, cs);
     }
 
-    List<BSProperty<?, ?, D>> build() throws BeanException {
+    private <T> PPosition<T, D> position(Class<T> pt, Field pf, Position pc) throws BeanException {
+        final IProcessor<D> ps = IProcessor.build(factory.context, pf, pc);
+        final D dataType = this.dataType(pf);
+        final TypeAdapter<T> adapter = this.resolve(pf, pt, pc);
+        final BSAccessor<T> va = this.accessor(pt, pf);
+        return new PPosition<>(va, dataType, offset, pc, ps, adapter);
+    }
+
+    List<BSProperty<?, D>> build() throws BeanException {
         this.checker.beforeSegment(type);
-        final List<BSProperty<?, ?, D>> ps = BSBuilder.build(type, this);
+        final List<BSProperty<?, D>> ps = BSBuilder.build(type, this);
         this.checker.afterSegment(checker);
-        return unmodifiableList(ps);
+        return List.copyOf(ps);
+    }
+
+    List<Field> links() {
+        return List.copyOf(links);
+    }
+
+    List<PId<D>> businessIds(List<BSProperty<?, D>> ps) throws BeanException {
+        final List<PId<D>> list = new ArrayList<>(ids.size());
+        for (final SId<D> id : ids) {
+            list.add(id.build(ps, mode));
+        }
+        return List.copyOf(list);
     }
 
     VContext context() {
@@ -313,6 +363,13 @@ final class BSContext<D extends DataType<D>> {
 
     void unknown(Field fp, Class<?> type) throws BeanException {
         checker.unknownProperty(fp, type);
+        if (fp.isAnnotationPresent(BusinessId.class)) {
+            final PPosition<?, D> bid = this.position(type, fp, NAN);
+            this.ids.add(new SId<>(List.copyOf(path), bid));
+        }
+        if (fp.getAnnotationsByType(BusinessLink.class).length != 0) {
+            links.add(fp);
+        }
     }
 
     Position position(Field field) {
@@ -323,44 +380,26 @@ final class BSContext<D extends DataType<D>> {
         return get(Fragment.class, fragments, field, FragmentOverride::value, p -> p.value() >= 0);
     }
 
-    <S extends Segment> PFragment<S, ?, D> node(Class<S> ft, Field ff, Fragment fr, List<BSProperty<?, ?, D>> ps) throws BeanException {
+    <S extends Segment> PFragment<S, D> node(Class<S> ft, Field ff, Fragment fr, List<BSProperty<?, D>> ps) throws BeanException {
         checker.afterFragmentProperty(ff, ft);
         final ValidOverride override = get(ValidOverride.class, validations, ff, ValidOverride::path);
         final VContext vc = context.build(ff, ft, override);
-        if (Optional.class.isAssignableFrom(ff.getType())) {
-            final BSAccessor<Optional<S>> va = this.accessor(cast(ft), ff);
-            return new PFragment.FO<>(this.node(ff, ft, vc, fr, ps), va, this.dataType(ff), offset, fr);
-        }
-        if (Wrapper.class.isAssignableFrom(ff.getType())) {
-            final BSAccessor<Wrapper<S>> va = this.accessor(cast(ft), ff);
-            return new PFragment.FW<>(this.node(ff, ft, vc, fr, ps), va, this.dataType(ff), offset, fr);
-        }
+        final BSAccessor<S> va = this.accessor(ft, ff);
         final BSNode<S, D> node = this.node(ff, ft, vc, fr, ps);
-        return new PFragment.FS<>(node, this.accessor(ft, ff), this.dataType(ff), offset, fr);
+        return new PFragment<>(node, va, this.dataType(ff), offset, fr);
     }
 
-    <T> PPosition<T, ?, D> property(Class<T> pt, Field pf, Position pc) throws BeanException {
-        checker.positionProperty(pf, pt, offset + pc.value());
-        final Input<D> ps = BSBuilder.build(factory.context, pf, pc);
-        final D dataType = this.dataType(pf);
-        final TypeAdapter<T> adapter = this.resolve(pf, pt, pc);
-        if (Optional.class.isAssignableFrom(pf.getType())) {
-            final BSAccessor<Optional<T>> va = this.accessor(cast(pt), pf);
-            return new PPosition.PO<>(va, dataType, offset, pc, ps, adapter);
+    <T> PPosition<T, D> property(Class<T> pt, Field fp, Position pc) throws BeanException {
+        checker.positionProperty(fp, pt, offset + pc.value());
+        final PPosition<T, D> result = this.position(pt, fp, pc);
+        if (fp.isAnnotationPresent(BusinessId.class)) {
+            this.ids.add(new SId<>(List.copyOf(path), result));
         }
-        if (Wrapper.class.isAssignableFrom(pf.getType())) {
-            final BSAccessor<Wrapper<T>> va = this.accessor(cast(pt), pf);
-            return new PPosition.PW<>(va, dataType, offset, pc, ps, adapter);
-        }
-        return new PPosition.PS<>(this.accessor(pt, pf), dataType, offset, pc, ps, adapter);
+        return result;
     }
 
-    Type fieldType(Field field) {
-        final Class<?> type = field.getType();
-        if (Optional.class.isAssignableFrom(type) || Wrapper.class.isAssignableFrom(type)) {
-            return getPropertyArguments(field, this.arguments)[0];
-        }
-        return getPropertyType(field, arguments);
+    Type fieldType(Field field) throws BeanException {
+        return unwrapType(field, arguments);
     }
 
     /**
@@ -413,17 +452,9 @@ final class BSContext<D extends DataType<D>> {
             return DISABLED;
         }
 
-        private static AnnotatedType type(Field field) {
-            if (field.getAnnotatedType() instanceof AnnotatedParameterizedType apt) {
-                return apt.getAnnotatedActualTypeArguments()[0];
-            }
-            return field.getAnnotatedType();
-        }
-
         private VContext build(Field f, Class<? extends Segment> ft, ValidOverride vo) throws BeanException {
-            final AnnotatedType at = type(f);
             if (enabled) {
-                final boolean hasValid = f.isAnnotationPresent(Valid.class) || at.isAnnotationPresent(Valid.class);
+                final boolean hasValid = isAnnotationPresent(f, Valid.class);
                 final Set<Class<?>> groups = new HashSet<>(asList(this.groups));
                 if (vo == null) {
                     final VContext ctx = from(ft);
@@ -440,6 +471,9 @@ final class BSContext<D extends DataType<D>> {
             }
             return DISABLED;
         }
-    }
 
+        boolean enabled(Validator validator) {
+            return enabled && validator != null;
+        }
+    }
 }
